[FIX]: index.html collapse
[ADD]: llm in papers

--- a/other.css
+++ b/other.css
@@ -94,7 +94,7 @@ a:link {
 }
 
 #content {
-    width: 75%;
+    width: 82%;
     margin-left: auto;
     margin-right: auto;
 }
